Fix trix textarea overflow
This commit fixes the overflow issue for trix textarea.

--- a/app/assets/stylesheets/manager/reserve_info.scss
+++ b/app/assets/stylesheets/manager/reserve_info.scss
@@ -213,10 +213,14 @@
       border-radius: 3px;
       box-sizing: border-box;
       font-size: 0.8125rem;
-      height: 12rem;
       min-height: 6rem;
       padding: 0.625rem;
       width: 100%;
+    }
+
+    textarea.form-textarea {
+      min-height: 6rem;
+      resize: vertical;
     }
 
     .form-input {
@@ -402,12 +406,10 @@
       border: 1px solid $gray;
       border-radius: 3px;
       box-sizing: border-box;
-      height: 6rem;
-      max-width: 100%;
       min-height: 6rem;
-      min-width: 100%;
       padding: 0.625rem;
       resize: vertical;
+      width: 100%;
     }
 
     .form-input {
